--- a/Data_Loading_Exploration_and_Cleaning.ipynb
+++ b/Data_Loading_Exploration_and_Cleaning.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "# Two different county datasets from the OpenIntro website were used.  The first\n",
     "# csv was the primary source as it contained values that ranged around 2015.  \n",
-    "# The second csv was used as it contained  a value I needed, specifically a\n",
+    "# The second csv was used as it contained a value I needed, specifically a\n",
     "# county's land area.\n",
     "\n",
     "county_demo = pd.read_csv('./gitignore/county.csv')\n",
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Precipitation, minimimum, maximimum and average termperatures, cooling days,\n",
+    "# Precipitation, minimum, maximum and average temperatures, cooling days,\n",
     "# and heating days all had yearly values that could be imported all at once. \n",
     "# PHDI, PDSI, and PMDI only had monthly values available which necessitated\n",
     "# more downloads.\n",
@@ -595,8 +595,8 @@
    "source": [
     "# This cell reveals that TP-TotPop (total population) is a combination of the\n",
     "# self-supplied population (DD-SSPop) plus the population supplied by public\n",
-    "# warter (PS-TOPop), Domestic total use (DO-WDelv) is total domestic \n",
-    "# self-supplied water withdrawals (DO-WFrTo) plus water withdaws from the \n",
+    "# water (PS-TOPop), Domestic total use (DO-WDelv) is total domestic \n",
+    "# self-supplied water withdrawals (DO-WFrTo) plus water withdraws from the \n",
     "# public supply (DO-PSDel), publicly supplied per capita use (DO-PSPCp) is\n",
     "# DO-PSDel times 1000 divided by PS-TOPop, and self-supplied per capita use \n",
     "# (DO-SSPCp) is DO-WFrTo times 1000 divided by DO-SSPop.\n",
@@ -787,7 +787,7 @@
     }
    ],
    "source": [
-    "# This describes the primrary OpenIntro dataset.\n",
+    "# This describes the primary OpenIntro dataset.\n",
     "county_demo.info()"
    ]
   },
@@ -816,7 +816,7 @@
     }
    ],
    "source": [
-    "# This describes values from the scecondary OpenIntro dataset that will be \n",
+    "# This describes values from the secondary OpenIntro dataset that will be \n",
     "# joined in order to incorporate population density.\n",
     "county_complete1 = county_complete[['name', 'state', 'area_2010',\\\n",
     "'density_2010']]\n",
@@ -968,7 +968,7 @@
     }
    ],
    "source": [
-    "# This describes the coutny differences between the OpenIntro dataset and the \n",
+    "# This describes the county differences between the OpenIntro dataset and the \n",
     "# USGS dataset.\n",
     "set(hydro2['COUNTY']).difference(set(county_demo['name']))"
    ]
@@ -1515,7 +1515,7 @@
    ],
    "source": [
     "# This shows that the two rows with null values are counties with\n",
-    "# indegenous populations and the third is Kalawao County in Hawaii.\n",
+    "# indigenous populations and the third is Kalawao County in Hawaii.\n",
     "\n",
     "null1 = pd.isnull(county_demo[\"unemployment_rate\"])\n",
     "county_demo[null1]"
@@ -2044,9 +2044,9 @@
     }
    ],
    "source": [
-    "# This describes the coutny differences between the NOAA dataset and the \n",
+    "# This describes the county differences between the NOAA dataset and the \n",
     "# USGS dataset. There are six counties not accounted for when the absence \n",
-    "# of Alaska, Hawaii, and Puerto Rico in the NOAA dataset are accounted for. \n",
+    "# of Alaska, Hawaii, and Puerto Rico in the NOAA dataset are accounted for \n",
     "Noaa_diff = hydro2.drop(hydro2[hydro2['STATE'] == \"AK\"].index)\n",
     "Noaa_diff2 = Noaa_diff.drop(Noaa_diff[Noaa_diff['STATE'] == \"HI\"].index)\n",
     "Noaa_diff3 = Noaa_diff2.drop(Noaa_diff2[Noaa_diff2['STATE'] == \"PR\"].index)\n",
@@ -2198,7 +2198,7 @@
     }
    ],
    "source": [
-    "# This will capitalize \"City\" so that the dota for rows like Alexandria City\n",
+    "# This will capitalize \"City\" so that the data for rows like Alexandria City\n",
     "# will be retained.\n",
     "ST_county_demo2['name'] = ST_county_demo2['name'].str.replace('city','City')\n",
     "ST_county_demo2[ST_county_demo2['name'] == 'Alexandria City'] "
@@ -2422,7 +2422,7 @@
     }
    ],
    "source": [
-    "# This reveals that their isn't a spelling error in the OpenIntro dataset.\n",
+    "# This reveals that there isn't a spelling error in the OpenIntro dataset.\n",
     "# (Missouri's county was the one that was misspelled.)\n",
     "ST_county_demo2[ST_county_demo2['name'] == 'DeKalb County']"
    ]
@@ -2448,7 +2448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This drops the columns not being used, including the dummy varialbes\n",
+    "# This drops the columns not being used, including the dummy variables\n",
     "# \"metro_no\" and \"'median_edu_some_college'\" which need to be dropped \n",
     "# in order to avoid multicollinearity.\n",
     "cleaned_demo = ST_county_demo3.drop(['smoking_ban','pop_change',\\\n",
@@ -2532,8 +2532,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This converts the location ID into a value that can be used for a \n",
-    "# merge by seperating the states abbreviation from the numbers that follow it.\n",
+    "#This converts the location ID into a value that can be used for a \n",
+    "# merge by separating the states abbreviation from the numbers that follow it.\n",
+    "\n",
     "\n",
     "precip['State'] = precip[\"Location ID\"].astype(str).str[:2]\n",
     "Min_temp['State'] = Min_temp[\"Location ID\"].astype(str).str[:2]\n",
@@ -2594,7 +2595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This drops the unnessary columns.\n",
+    "# This drops the unnecessary columns.\n",
     "precip = precip.drop(['Location ID', 'Rank',\\\n",
     "'Anomaly (1901-2000 base period)', '1901-2000 Mean'], axis = 1)\n",
     "Min_temp = Min_temp.drop(['Location ID', 'Rank',\\\n",
@@ -3089,7 +3090,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This drops unneccessay columns.\n",
+    "# This drops unnecessary columns.\n",
     "cleaned_NOAA = NOAA.drop(['Location_x','abr', 'Location_y', 'state'], axis = 1)      "
    ]
   },
@@ -3100,7 +3101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finally, 'La Salle Parish'is changed to 'LaSalle Parish' so its values aren't\n",
+    "# Finally, 'La Salle Parish' is changed to 'LaSalle Parish' so its values aren't\n",
     "# lost once NOAA is merged with USGS.\n",
     "cleaned_NOAA['County'] = cleaned_NOAA['County'].str.replace\\\n",
     "('La Salle Parish','LaSalle Parish')"
@@ -3162,7 +3163,7 @@
     "# This creates a large dataset that includes weather factors and demographic\n",
     "# data.  This will be used as the primary dataset from which subsequent smaller\n",
     "# datasets will be derived from.  It has 3105 rows of data.  There is only one\n",
-    "# difference as two of of the columns with nan values for the demographic dataset\n",
+    "# difference as two of the columns with nan values for the demographic dataset\n",
     "# were in Alaska and Hawaii which are states not included in the NOAA dataset.\n",
     "\n",
     "cleanNOAAUSGSdom = pd.merge(cleanNOAAUSGS, cleaned_demo, \\\n",
