--- a/Definitions.ipynb
+++ b/Definitions.ipynb
@@ -588,17 +588,17 @@
    "source": [
     "## [NOAA'S Climate at a Glance website](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/statewide/mapping/)\n",
     "\n",
-    "A solid definition for the calculation of values for temperature and percipitation was not provided so the data itself was inspected.  For example, Alabama's 2015 yearly max temperature was 75.4 and monthly values for the state's 2015 minimum temperature were added and divided by 12 to see if the same number was obtained. (It was).  A similar type of analysis was done with percipitation.  The following are my definitions derived from this analysis. \n",
+    "A solid definition for the calculation of values for temperature and precipitation was not provided so the data itself was inspected.  For example, Alabama's 2015 yearly max temperature was 75.4 and monthly values for the state's 2015 minimum temperature were added and divided by 12 to see if the same number was obtained. (It was).  A similar type of analysis was done with precipitation.  The following are my definitions derived from this analysis. \n",
     "\n",
     "\n",
     "\n",
-    "**Minimum temperature** - the mean of the lowest temperatures (not the lowest temperature overall) measured in Farenheight.\n",
+    "**Minimum temperature** - the mean of the lowest temperatures (not the lowest temperature overall) measured in Fahrenheit.\n",
     "\n",
-    "**Average temperature** - the mean of the average temperatures measured in Farenheight.\n",
+    "**Average temperature** - the mean of the average temperatures measured in Fahrenheit.\n",
     "\n",
-    "**Maximum temperature** - the mean of the highest temperatures measured in Farenheight.\n",
+    "**Maximum temperature** - the mean of the highest temperatures measured in Fahrenheit.\n",
     "\n",
-    "**Percipitation** - cumulative amount of percipitation measured in inches"
+    "**Precipitation** - cumulative amount of precipitation measured in inches"
    ]
   },
   {
@@ -654,7 +654,7 @@
    "id": "ca27ccce",
    "metadata": {},
    "source": [
-    "## Defintions Created During Feature Engineering"
+    "## Definitions Created During Feature Engineering"
    ]
   },
   {
@@ -662,7 +662,7 @@
    "id": "333e19aa",
    "metadata": {},
    "source": [
-    "**Total_Dom-per_cap** - The total amount of water withdrawn from a county for domestic use divided by the counties total population.\n",
+    "**Total_Dom-per_cap** - The total amount of water withdrawn from a county for domestic use divided by the county’s total population.\n",
     "\n",
     "**2015_density** - The total population of a county divided by the counties total land area.\n",
     "\n",
