--- a/Water_Withdraw_and_Consumption_Model_Development.ipynb
+++ b/Water_Withdraw_and_Consumption_Model_Development.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This loads the cleaned datasets made for this analyis. cleanNOAAUSGSdom will\n",
+    "# This loads the cleaned datasets made for this analysis. cleanNOAAUSGSdom will\n",
     "# be the one used as it only has one less row.\n",
     "\n",
     "cleanNOAAUSGS = pd.read_csv('./gitignore/cleanNOAAUSGS.csv')\n",
@@ -777,9 +777,7 @@
    "id": "6282300a",
    "metadata": {},
    "source": [
-    "## Basleine Model\n",
-    "\n",
-    "Without any modfifications, a baseline model that compares the amount of water consumed by the amount of acres irrigated has an adjusted R-squared of .626.  This means that the model explains 62.6 percent of the variance in the data.  A one acre increase of irrigated golf course is associated with a 1.82 million gallon per day of consumptive water use.  This result is statistically significant.  The mean absolute error is .519 Mgal and the mean squred error is 1.7 Mgal.  This is a wide margin of error. The residuals are highly skewed as indicated by Prob(JB).  This mean is signifanctly higher than what was expected from the descriptive statistics.  This suggest that the outliers are having a heavy impact on the model.  "
+    "## Basleine Model"
    ]
   },
   {
@@ -850,7 +848,7 @@
    ],
    "source": [
     "# This calculates the mean absolute error and the mean squared error,\n",
-    "# two methods of of evaluating departures from the predicted values.\n",
+    "# two methods of evaluating departures from the predicted values.\n",
     "\n",
     "\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
@@ -869,10 +867,9 @@
    "metadata": {},
    "source": [
     "## Baseline Model Without Outliers\n",
-    "Given the highly skewed nature of the data, it was necessary to drop outliers. Several methods were used to do this. First, any county with a consumption greater than 3 Mgal per 1000 acre was dropped from the dataset. The majority of these counties were in Arizona and Florida.  Surprisingly, Sherburne County, MN and Erie County, OH, are the two largest outliers, two states one wouldn't expect much irrigation from.  Snowmaking for skiing doesn't appear to be the reason as they don't appaear to have combined [golf- ski courses](https://www.golfpass.com/travel-advisor/articles/25-best-us-golf-ski-resorts) and there are plenty of other counties that do that don't appear on this list.  That drop resulted in 36 counties being removed.  \n",
+    "Given the highly skewed nature of the data, it was necessary to drop outliers. Several methods were used to do this. First, any county with a consumption greater than 3 Mgal per 1000 acre was dropped from the dataset. The majority of these counties were in Arizona and Florida.  Surprisingly, Sherburne County, MN and Erie County, OH, are the two largest outliers, two states one wouldn't expect much irrigation from.  Snowmaking for skiing doesn't appear to be the reason as they don't appear to have combined [golf- ski courses](https://www.golfpass.com/travel-advisor/articles/25-best-us-golf-ski-resorts) and there are plenty of other counties that do that don't appear on this list.  That drop resulted in 36 counties being removed.  \n",
     "\n",
-    "The next drop removed counties with a -6 or greater \"golf error\", a calculated value based off of the predicted y value.  These counties tend to either have a large amount of golf courses but were more conservative with their use (i.e Riverside) or had other issues (How can Orangeburg County have 6.01 irrigation with sprinklers but only 0.40 consumptive use?  Are they using their sprinklers to fill their water hazzards?).  This resulted in 6 more counties being dropped.  Finally, Palm Beach County, Florida was removed because it had a lot of golf courses and a higher than average water consumption but it was below the 3 Mgal per 1000 acre threshold.  These factors caused it to have an outsized impact on the overall analysis.  \n",
-    "\n",
+    "The next drop removed counties with a -6 or greater \"golf error\", a calculated value based off of the predicted y value.  These counties tend to either have a large amount of golf courses but were more conservative with their use (i.e Riverside) or had other issues (How can Orangeburg County have 6.01 irrigation with sprinklers but only 0.40 consumptive use?  Are they using their sprinklers to fill their water hazards?).  This resulted in 6 more counties being dropped.  Finally, Palm Beach County, Florida was removed because it had a lot of golf courses and a higher-than-average water consumption but it was below the 3 Mgal per 1000-acre threshold.  These factors caused it to have an outsized impact on the overall analysis.  \n",
     "\n",
     "43 counties were dropped while 1535 remained.  The dropping of the outliers didn't cause the residuals to be normalized but it did improve the R-squared and overall errors."
    ]
@@ -912,7 +909,7 @@
    "outputs": [],
    "source": [
     "# This drops what was defined as outliers.  The decisions made were done \n",
-    "# to try and capture the relationshps between variables while retaining most \n",
+    "# to try and capture the relationships between variables while retaining most \n",
     "# of the data.  \n",
     "\n",
     "golf_out = golf1.drop(golf1[golf1['golf_con-per_1000_acre'] > 3].index)\n",
@@ -2516,7 +2513,7 @@
    "source": [
     "## Multiple Linear Regression\n",
     "\n",
-    "The dropping of outliers resulted in both PHDI and precipation to lose there statistical significance.  Hence, prior to log scaling, the only variable that was kept was maximum temperature.  The R-Squared of the model with maximum temperature was .820 which is an improvement on the model that didn't have its presence (.808).  Every acre of irrigated golf course was associated with a 1.20 Mgal/d consumptive use of water.  Every degree increase in maximum temperature was associated with a 0.0163 Mgal/d consumptive use of water."
+    "The dropping of outliers resulted in both PHDI and precipitation to lose their statistical significance.  Hence, prior to log scaling, the only variable that was kept was maximum temperature.  The R-Squared of the model with maximum temperature was .820 which is an improvement on the model that didn't have its presence (.808).  Every acre of irrigated golf course was associated with a 1.20 Mgal/d consumptive use of water.  Every degree increase in maximum temperature was associated with a 0.0163 Mgal/d consumptive use of water."
    ]
   },
   {
@@ -2561,7 +2558,7 @@
     }
    ],
    "source": [
-    "# Before outliers were dropped, all of the vraibles were statistically \n",
+    "# Before outliers were dropped, all of the variables were statistically \n",
     "# significant.\n",
     "\n",
     "y_golf2 = golf1[\"IG-CUsFr\"]\n",
@@ -2615,7 +2612,7 @@
    ],
    "source": [
     "# The dropping of the outliers caused PHDI and precipitation to \n",
-    "# lose their statistical sifnificance. \n",
+    "# lose their statistical significance.\n",
     "\n",
     "y_golf3 = golf_out3[\"IG-CUsFr\"]\n",
     "X_golf3 = golf_out3[[\"IG-IrTot\", \"Max_temp\", \"Precip\", \"PHDI\"]]\n",
@@ -2692,9 +2689,7 @@
    "id": "6672704e",
    "metadata": {},
    "source": [
-    "## Log Scalled Multiple Linear Regression \n",
-    "\n",
-    "The persistence of non-normal residuals continued to have an impact on the analysis so it was decided to log scale the model.  While this has the problem of making the analysis more difficult to interpret, it has the advantage of having a more normal distrubution.  The result of the transformation resulted in PHDI regaining its statistical signifcance.  Precipitation was barely significant and didn't have much impact on the model so it was dropped. The log scaling casued the R-squared to drop but it is thought to be a better model overall as it is closer to a normal distribution.  The association between water consumption and acreage (both of which are now log scaled) is at .94."
+    "## Log Scalled Multiple Linear Regression "
    ]
   },
   {
@@ -2814,8 +2809,8 @@
    ],
    "source": [
     "# QQ plots of the various models. The bottom one is the \n",
-    "# log scaled model and it shows a marked improvement \n",
-    "# with non-normal residuals although it is stll not ideal.\n",
+    "# log-scaled model and it shows a marked improvement \n",
+    "# with non-normal residuals although it is still not ideal.\n",
     "\n",
     "fig, ax = plt.subplots(nrows = 4, figsize=[10, 14])\n",
     "plt.rcParams.update({'font.size': 20})\n",
@@ -3026,7 +3021,7 @@
     "# The largest outlier amongst counties with large populations, Maricopa County,\n",
     "# Arizona, had higher multi-unit and density percentages than Riverside or San \n",
     "# Bernardino so there is more going on.  The fact that it is in the middle of \n",
-    "# the Sonoran desert doesn't particularly seperate it from LA.\n",
+    "# the Sonoran desert doesn't particularly separate it from LA.\n",
     "\n",
     "cleanNOAAUSGSdom.iloc[[74],:][['COUNTY', 'STATE',\\\n",
     "'Total_Dom-per_cap', 'multi_unit', '2015_density']]"
@@ -3287,7 +3282,7 @@
    "source": [
     "# This calculates the percentage of water withdrawn from the public water\n",
     "# supply as opposed to self-supplied sources such as wells.  This variable\n",
-    "# was used initaillybut it dropped out of the model due to issues with \n",
+    "# was used initailly but it dropped out of the model due to issues with \n",
     "# multicollinearity.\n",
     "\n",
     "cleanNOAAUSGSdom[\"Public_volume-percentage\"] = \\\n",
@@ -5347,10 +5342,10 @@
    "source": [
     "# The top plot shows the predicted values in red versus the actual values in\n",
     "# blue. The middle plot plots the residuals themselves.  They are being \n",
-    "# compared to the predicted value which is represented by the black lne.  The \n",
+    "# compared to the predicted value which is represented by the black line.  The \n",
     "# bottom plot is a qq plot. QQ plots compare the quantiles of the sample \n",
     "# (counties in this example) versus theoretical quantiles (often from a normal\n",
-    "# distrubition).  All three plots model deviations from the predicted value and\n",
+    "# distribution).  All three plots model deviations from the predicted value and\n",
     "# there is one outlier that clearly stands alone - Maricopa County. while there\n",
     "# are locations with smaller populations that deviate more on a per capita basis,\n",
     "# the large population of Maricopa has a significant impact on a model that \n",
@@ -5385,7 +5380,7 @@
    "outputs": [],
    "source": [
     "# This makes a column called y_pred_net which is the predicted value for y.\n",
-    "# The amount of water withdrawn from a county is then subracted by \n",
+    "# The amount of water withdrawn from a county is then subtracted by \n",
     "# Y-pred_net to create a metric that evaluates how far the county \n",
     "# deviates from expectations.  Then the maximum value was found\n",
     "# which was 294.\n",
@@ -5529,7 +5524,7 @@
     }
    ],
    "source": [
-    "# This returns all of the couties with a deviation greater than \n",
+    "# This returns all of the counties with a deviation greater than \n",
     "# 290.  There is only one which is shown below.\n",
     "\n",
     "Domestic_withdraw.loc[Domestic_withdraw[\"domestic_withdraw_error\"] > 290]"
@@ -5652,7 +5647,7 @@
    "source": [
     "### Attempt to Log Scale\n",
     "\n",
-    "In order to try and normalize the residuals, a log scale model was attempted.  It didn't work.  While Jarque Bera went from 1,059,693 to 3146.262, the differance was likely due to it now being on a log scale considering the p-value remained at 0.00. Log scale models are harder to interpret so this model wasn't used."
+    "In order to try and normalize the residuals, a log scale model was attempted.  It didn't work.  While Jarque Bera went from 1,059,693 to 3146.262, the difference was likely due to it now being on a log scale considering the p-value remained at 0.00. Log scale models are harder to interpret so this model wasn't used."
    ]
   },
   {
@@ -5740,9 +5735,8 @@
    ],
    "source": [
     "# This prints the results of the model after the variables were \n",
-    "# transformed.  JB's probabily sill remained at 0.00, hence log \n",
+    "# transformed.  JB's probability sill remained at 0.00, hence log \n",
     "# scaling didn't solve the problem.\n",
-    "\n",
     "\n",
     "y_net_dom3 = Domestic_withdraw2[\"log(DO-WDelv)\"]\n",
     "X_net_dom3 = Domestic_withdraw2[\"log(TP-TotPop)\"]\n",
@@ -5787,7 +5781,7 @@
    "source": [
     "### Attempts to Add More Vddariables.\n",
     "\n",
-    "Adding additional variables to the model was also attempted but the strength of the correllation between population and water withdraw meant that multicollinearity was essentially inevitable whenever any other variable was added into the model.  A good example of this was max_temp.  It only had a 0.08% correlation with total population, but it still showed up as having strong multicollinearity.  It also had virtually no effect on the models performance.  For such reasons, adding more variables to the net domestic water withdraw model was abandoned."
+    "Adding additional variables to the model was also attempted but the strength of the correlation between population and water withdraw meant that multicollinearity was essentially inevitable whenever any other variable was added into the model.  A good example of this was max_temp.  It only had a 0.08% correlation with total population, but it still showed up as having strong multicollinearity.  It also had virtually no effect on the model’s performance.  For such reasons, adding more variables to the net domestic water withdraw model was abandoned."
    ]
   },
   {
@@ -5944,10 +5938,10 @@
     "# The top two plots, Y and fitted vs. X and Residuals versus \"IR-WSWFr\"\n",
     "# are ones seen before with the net withdraw models.  As can be seen,\n",
     "# there are several outliers that are having an impact on the model.\n",
-    "# The next two plots, partial regresssion and CCPR, are really only used \n",
+    "# The next two plots, partial regression and CCPR, are really only used \n",
     "# with multiple linear regression.  It is ok to ignore them for now.  This \n",
     "# format was used so one has a reference point to look to once multiple\n",
-    "# linear regession models are created. \n",
+    "# linear regression models are created.\n",
     "\n",
     "plt.rcParams.update({'font.size': 16})\n",
     "sm.graphics.plot_regress_exog(percap_dom_results, \"IR-WSWFr\", fig=plt.figure(figsize=(12, 8)));"
@@ -5987,7 +5981,7 @@
    "source": [
     "## Minus Outlier Model (Per Capita)\n",
     "\n",
-    "Efforts to remove more outliers than 175 domestic per capita error continually failed.  Most of the time, the r-squared went down.  The R-squared could go up by removing a bunch of counties but then one is essentially cherry-picking the data and losing a lot of information that may be important.  If (as was the case) most of the counties were the ones that are most impacted by variables such as drought or heat, then eseentially what one would be doing by eliminating too many counties is developing a model for counties that are not as impacted by said conditions which was not the intention.  Hence, a surgical approach was adopted.  The end result is a fairly weak model but one that attempts to understand the impacts of weather and demographic factors on domestic water consumption for the vast majority of counties. "
+    "Efforts to remove more outliers than 175 domestic per capita error continually failed.  Most of the time, the r-squared went down.  The R-squared could go up by removing a bunch of counties but then one is essentially cherry-picking the data and losing a lot of information that may be important.  If (as was the case) most of the counties were the ones that are most impacted by variables such as drought or heat, then essentially what one would be doing by eliminating too many counties is developing a model for counties that are not as impacted by said conditions which was not the intention.  Hence, a surgical approach was adopted.  The end result is a fairly weak model but one that attempts to understand the impacts of weather and demographic factors on domestic water consumption for the vast majority of counties."
    ]
   },
   {
@@ -5998,7 +5992,7 @@
    "outputs": [],
    "source": [
     "# This makes a column called y_pred_percap which is the predicted value for y.\n",
-    "# The domestic per capita use of a county is then subracted by y_pred_percap\n",
+    "# The domestic per capita use of a county is then subtracted by y_pred_percap\n",
     "# to create a metric that evaluates how far the county deviates from\n",
     "# expectations.  The highest value was 809 gallons per day. After exploring\n",
     "# the data, a domestic error greater than 175 appeared to make the\n",
@@ -6514,7 +6508,7 @@
     }
    ],
    "source": [
-    "# One can remove some lower values but this only has a marginal effect\n",
+    "# One can remove some lower values but this only has a marginal effect.\n",
     "\n",
     "Domestic_percap_out3 = Domestic_percap_out.drop(Domestic_percap_out\\\n",
     "[Domestic_percap_out[\"Total_Dom-per_cap\"] < 30].index)\n",
@@ -6718,7 +6712,7 @@
    "source": [
     "# This prints out the results from a multiple regression model where poverty\n",
     "# was kept.  Its statistical significance was .249 which is above .05% and \n",
-    "# is not statistically signficant.  It had been lower prior to the dropping\n",
+    "# is not statistically significant.  It had been lower prior to the dropping\n",
     "# of outliers.\n",
     "\n",
     "y_percap_dom3 = Domestic_percap_out[\"Total_Dom-per_cap\"]\n",
@@ -6779,7 +6773,7 @@
    ],
    "source": [
     "# This is the multiple regression model being used.  The dropping of poverty\n",
-    "# from the model didn't harm the R-sqaured.\n",
+    "# from the model didn't harm the R-squared.\n",
     "\n",
     "\n",
     "y_percap_dom3 = Domestic_percap_out[\"Total_Dom-per_cap\"]\n",
@@ -6820,15 +6814,15 @@
    "source": [
     "# This is multiple linear regression so now all four plots are relevant.\n",
     "# The same variable, IR-WSWFr, is being plotted.  More of the datapoints\n",
-    "# are in the expected range of the fitted model altough many still remain \n",
+    "# are in the expected range of the fitted model although many still remain \n",
     "# outside of it.  The residuals are more centered but there is still \n",
     "# significant deviation from the predicted value.  What is being plotted\n",
     "# on the x-axis for a partial regression plot is the part of IR-WSWFr\n",
-    "# not explained by the rest of the model and the y-axisis the total \n",
-    "# domenstic per capita water use not explained by the rest of the model.  \n",
+    "# not explained by the rest of the model and the y-axis is the total \n",
+    "# domestic per capita water use not explained by the rest of the model.  \n",
     "# A non-zero slope is desired and IR-WSWFr has one.  The CCPR plot is \n",
     "# a scatter plot with IR-WSWFr on the x-axis and the residuals plus \n",
-    "# IR-WSWFr times its coeficcient on the y-axis. Again, one is looking \n",
+    "# IR-WSWFr times its coefficient on the y-axis. Again, one is looking \n",
     "# for a non-zero slope.\n",
     "\n",
     "plt.rcParams.update({'font.size': 16})\n",
